--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.9.2",
     "express": "^4.10.1",
+    "mongoose": "^3.8.19",
+    "q": "^1.1.0",
     "socket.io": "^1.2.0"
   }
 }
